--- a/.github/workflows/deployrel.yml
+++ b/.github/workflows/deployrel.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Test de la variable Token Expiration Time
         shell: pwsh
         run: |
-          echo "Le jeton généré est: ${{ steps.var_exp.ouputs.outexp }}"
+          echo "Le jeton généré est: ${{ steps.var_exp.outputs.outexp }}"
 
       - name: Download Repo conten
         uses: actions/checkout@v2
