--- a/.github/workflows/deployrel.yml
+++ b/.github/workflows/deployrel.yml
@@ -85,7 +85,7 @@ jobs:
 
       # this is the new step using the ms-teams-notification action
       - name: Notify dedicated teams channel
-        uses: jdcargile/ms-teams-notification
+        uses: jdcargile/ms-teams-notification@v1.3
         with:
           github-token: ${{ github.token }} # this will use the runner's token.
           ms-teams-webhook-uri: https://microsoft.webhook.office.com/webhookb2/ef8d16c9-11de-4c0f-9f2f-f419accdf3e8@72f988bf-86f1-41af-91ab-2d7cd011db47/IncomingWebhook/f5b044a2bd45484d88d4967d50331449/a8d22f4a-2ecb-4f02-9a95-4e4d2d417a24
